--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -7,6 +7,11 @@
         "methods": ["GET", "POST", "PUT", "DELETE", "PATCH"]
       }
     ],
-    "outputDirectory": "dist"
+    "rewrites": [
+      {
+        "source": "/(.*)",
+        "destination": "/"
+      }
+    ]
   }
   
