--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,11 +1,7 @@
 {
     "version": 2,
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "src/main.ts",
-        "methods": ["GET", "POST", "PUT", "DELETE", "PATCH"]
-      }
+    "rewrites": [
+      { "source": "/(.*)", "destination": "/" }
     ]
   }
   
