--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,7 +1,11 @@
 {
     "version": 2,
-    "rewrites": [
-      { "source": "/(.*)", "destination": "/" }
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "src/main.js",
+        "methods": ["GET", "POST", "PUT", "DELETE", "PATCH"]
+      }
     ]
   }
   
