--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -6,6 +6,7 @@
         "dest": "src/main.js",
         "methods": ["GET", "POST", "PUT", "DELETE", "PATCH"]
       }
-    ]
+    ],
+    "outputDirectory": "dist"
   }
   
