--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,9 +1,11 @@
 {
     "version": 2,
+    "buildCommand": "npm run build",
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "src/main.js",
+        "dest": "src/main.ts",
+        
         "methods": ["GET", "POST", "PUT", "DELETE", "PATCH"]
       }
     ],
