--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -4,8 +4,8 @@
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "src/main.ts",
-        
+        "dest": "/main.js",
+
         "methods": ["GET", "POST", "PUT", "DELETE", "PATCH"]
       }
     ],
