--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -4,7 +4,7 @@
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "/main.js",
+        "dest": "/",
 
         "methods": ["GET", "POST", "PUT", "DELETE", "PATCH"]
       }
