--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,6 +1,13 @@
 {
     "version": 2,
     "buildCommand": "npm run build",
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "/dist",
+        "methods": ["GET", "POST", "PUT", "DELETE", "PATCH"]
+      }
+    ],
     "outputDirectory": "dist"
   }
   
