add output directory

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,1 +1,7 @@
-{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/dist" }] }
+{
+    "version": 2,
+    "buildCommand": "npm run build",
+    "rewrites": [{ "source": "/(.*)", "destination": "/dist" }],
+    "outputDirectory": "dist"
+  }
+  
