remove output directory

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,7 +1,6 @@
 {
     "version": 2,
     "buildCommand": "npm run build",
-    "rewrites": [{ "source": "/(.*)", "destination": "/dist" }],
-    "outputDirectory": "dist"
+    "rewrites": [{ "source": "/(.*)", "destination": "/dist" }]
   }
   
