--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -3,7 +3,9 @@
   "builds": [
     {
       "src": "dist/main.js",
-      "use": "@vercel/node"
+      "use": "@vercel/node",
+      "buildCommand": "npm run build",
+      "outputDirectory": "dist"
     }
   ],
   "routes": [
