remove output dir

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -3,8 +3,7 @@
   "builds": [
     {
       "src": "dist/main.js",
-      "use": "@vercel/node",
-      "outputDirectory": "dist"
+      "use": "@vercel/node"
     }
   ],
   "routes": [
