--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,6 +1,11 @@
 {
   "version": 2,
-  "buildCommand": "npm run build",
+  "builds": [
+    {
+      "src": "src/main.ts",
+      "use": "@vercel/node"
+    }
+],
   "routes": [
     {
       "src": "/(.*)",
