--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build && npm run migration:run",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "build:prod": "npm install -g @nestjs/cli && npm run build",
+     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
