--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build && npm run migration:run",
-    "build:prod": "npm install -g @nestjs/cli && npm run build",
+    "build:prod": "npm install -g @nestjs/cli && npm install && npm run build",
      "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
